# scalar-portal

./: .gitignore  scalar-portal.cabal  stack.yaml
src/: calcvar.hs  hist_costheta.hs  hist_energy.hs  hist_pdecay.hs  scalar_angle_hist.hs  scalar_energy_angle.hs  scalar_energy_hist.hs
