name:                scalar-portal
version:             0.0.0.0
synopsis:            Collider study of scalar-portal models
description:         Collider study of scalar-portal models
homepage:            https://github.com/cbpark/scalar-portal
license:             GPL-3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2016 Chan Beom Park
category:            Physics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:cbpark/scalar-portal.git

executable scalar_energy_angle
  main-is:             scalar_energy_angle.hs
  build-depends:       base >=4.8
                     , bytestring
                     , lhef-tools
                     , pipes
                     , zlib
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields

executable scalar_energy_hist
  main-is:             scalar_energy_hist.hs
  build-depends:       base >=4.8
                     , attoparsec
                     , bytestring
                     , hep-utilities
                     , pipes
                     , pipes-attoparsec
                     , pipes-bytestring
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields